fix homepage button mobile view

--- a/src/styles/HomePage.module.css
+++ b/src/styles/HomePage.module.css
@@ -36,3 +36,9 @@
     margin-top: 120px;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .btnContainer {
+    flex-direction: column;
+  }
+}
